src/components/labels/_labels.scss
$labelPrimaryColor: $black;
$labelSecondaryColor: $grayPrimary;
$labelFontSizePrimary: fontSize(obscure);
$labelFontSizeSecondary: fontSize(xsmall);
$labelFontSizeLarge: fontSize(standout);
$labelIconSizePrimary: 16px;
$labelIconSizeSecondary: 14px;
$labelIconSizeLarge: 24px;
$labelScaleFactor: 2 / 3;

$includeHtml: false !default;

@if ($includeHtml) {

  .sg-label {
    @include component();
    overflow: visible;
    display: flex;
    align-items: center;

    &__text,
    &__number {
      @include fixText($labelFontSizePrimary, 2 / 16);
      @include fixOperaMiniLabelText();

      display: block;
      color: $labelPrimaryColor;
      font-weight: $fontWeightBold;
      margin-right: gutter(0.25);

      &:last-child {
        margin-right: 0;
      }
    }

    &__icon {
      width: $labelIconSizePrimary;
      height: $labelIconSizePrimary;
      display: flex;
      flex-shrink: 0;
      align-items: center;
      margin-right: gutter(0.25);

      &:last-child {
        margin-right: 0;
      }
    }

    &--emphasised {
      @include uppercaseText(0);
    }

    &--secondary {
      .sg-label__text,
      .sg-label__number {
        color: $labelSecondaryColor;
      }
    }

    &--small {
      min-height: 0;

      .sg-label__text,
      .sg-label__number {
        @include fixText($labelFontSizeSecondary);
        @include fixOperaMiniLabelText();

        margin-right: $labelScaleFactor * gutter(0.25);

        &:last-child {
          margin-right: 0;
        }
      }

      .sg-label__icon {
        margin-right: $labelScaleFactor * gutter(0.25);
        width: $labelIconSizeSecondary;
        height: $labelIconSizeSecondary;
      }
    }

    &--large {
      .sg-label__text,
      .sg-label__number {
        @include fixText($labelFontSizeLarge);
        @include fixOperaMiniLabelText();

        &:last-child {
          margin-right: 0;
        }
      }

      .sg-label__icon {
        margin-right: gutter(0.5);
        width: $labelIconSizeLarge;
        height: $labelIconSizeLarge;
      }

    }

    &--unstyled {
      .sg-label__text,
      .sg-label__number {
        color: inherit;
      }
    }

    &--elements-to-the-top {
      align-items: flex-start;
    }
  }

}

